<resources>
    <string name="app_name">FreeFeed</string>
    <string name="phone_hint">请输入电子邮箱地址</string>
    <string name="forget_password">忘记密码</string>
    <string name="fast_register">注册</string>
    <string name="login">登录</string>
    <string name="password_hint">请输入6到18位数字字母组合密码</string>
    <string name="cancel">取消</string>
    <string name="send">发布</string>

    <string name="clean_cache">清理缓存</string>
    <string name="about_us">关于我们</string>
    <string name="version_information">版本信息</string>
    <string name="service_declaration">服务与申明</string>
</resources>
