<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/statusbar_height"
        android:background="@color/background" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="@color/white"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:layout_centerInParent="true"
            android:textColor="@color/mose"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/white"
        android:paddingLeft="14dp"
        android:paddingRight="14dp">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/btn_rect_stoke_gray"
            android:hint="@string/phone_hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="14dp"
            android:textColorHint="@color/typeface_most_light"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@+id/et_phone"
            android:background="@drawable/btn_rect_stoke_gray_no_top"
            android:hint="请输入6到18位数字字母组合密码"
            android:inputType="textPassword"
            android:paddingLeft="14dp"
            android:textColorHint="@color/typeface_most_light"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@id/et_password"
            android:layout_marginTop="34dp"
            android:background="@drawable/btn_rect_blue"
            android:text="@string/login"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="17dp">

            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/forget_password"
                android:textColor="@color/typeface_depth"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/fast_register"
                android:textColor="@color/indicator_blue"
                android:textSize="14sp" />
        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>